# libhsm

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  cmake_uninstall.cmake.in  libhsm.pc.in  makefile
include/: p11hsm.h
include/oasis/: cryptoki.h  pkcs11.h
src/: mechtype.cpp  p11hsm.cpp
